[tool.poetry]
name = "sonofflan"
version = "0.1.0"
description = "Library to interact with Sonoff devices through LAN mode (without eWeLink cloud)"
authors = ["Danilo Treffiletti <urban82@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"
keywords = ["sonoff", "ewelink", "itead"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Networking",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.9"
pycryptodome = "^3.15.0"
requests = "^2.28.1"
zeroconf = "^0.39.4"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-asyncio = "^0.20.2"
requests-mock = "^1.10.0"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
